Added check to Spoon.bat and added Java 64-bit jar to libswt output