@@ -22,7 +22,7 @@ REM limitations under the License.
 REM
 REM *****************************************************************************
 
-setlocal 
+setlocal
 
 cd /D %~dp0
 
@@ -93,6 +93,34 @@ GOTO :CONTINUE
 REM ===========================================
 REM Using 64bit java, so include 64bit SWT Jar
 REM ===========================================
+
+
+REM Check if running Windows 11
+
+REM Check if the major version of Windows is 10.0 (Windows 10 or Windows 11). If it is save the build number
+for /f "tokens=4-7 delims=[.] " %%i in ('ver') do @(if %%i=="10.0" (set WINDOWS_BUILD_VERSION= ) else (set WINDOWS_BUILD_VERSION=%%k))
+
+REM Convert WINDOWS_BUILD_VERSION to a number
+set /A WINDOWS_BUILD_NUMBER=%WINDOWS_BUILD_VERSION%
+
+
+REM First build number of Windows 11 is 20000
+if %WINDOWS_BUILD_NUMBER% LSS 20000 GOTO :continueWithoutWindows11
+SET ISWINDOWS11=true
+:continueWithoutWindows11
+
+if %ISJAVA8% == 1 GOTO :CHECKWINDOWS11 else GOTO :CONTINUESCRIPT
+:CHECKWINDOWS11
+if NOT "%ISWINDOWS11%"==true GOTO :CONTINUESCRIPT
+echo Pentaho requires Java 11 to function on Windows 11
+
+:CONTINUESCRIPT
+if %ISJAVA8% == 1 GOTO :SETJAVA8SWT else :GOTO :SETJAVASWT
+:SETJAVA8SWT
+set LIBSPATH=libswt\win64_java8
+set SWTJAR=..\libswt\win64_java8
+GOTO :CONTINUE
+:SETJAVASWT
 set LIBSPATH=libswt\win64
 set SWTJAR=..\libswt\win64
 :CONTINUE
@@ -103,6 +131,7 @@ REM ** Setup Karaf endorsed libraries directory     **
 REM **************************************************
 set JAVA_ENDORSED_DIRS=
 set JAVA_LOCALE_COMPAT=
+set JAVA_ADD_OPENS=
 IF NOT %ISJAVA8% == 1 GOTO :SKIPENDORSEDJARS
 
 if not "%_PENTAHO_JAVA_HOME%" == "" set JAVA_ENDORSED_DIRS=%_PENTAHO_JAVA_HOME%\jre\lib\endorsed;%_PENTAHO_JAVA_HOME%\lib\endorsed;
@@ -112,6 +141,7 @@ GOTO :COLLECTARGUMENTS
 :SKIPENDORSEDJARS
 REM required for Java 11 date/time formatting backwards compatibility
 set JAVA_LOCALE_COMPAT=-Djava.locale.providers=COMPAT,SPI
+set JAVA_ADD_OPENS=--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED
 
 :COLLECTARGUMENTS
 REM **********************
@@ -145,6 +175,6 @@ REM Eventually call java instead of javaw and do not run in a separate window
 if not "%SPOON_CONSOLE%"=="1" set SPOON_START_OPTION=start %STARTTITLE%
 
 @echo on
-%SPOON_START_OPTION% "%_PENTAHO_JAVA%" %OPT% -jar launcher\launcher.jar -lib ..\%LIBSPATH% %_cmdline%
+%SPOON_START_OPTION% "%_PENTAHO_JAVA%" %JAVA_ADD_OPENS% %OPT% -jar launcher\launcher.jar -lib ..\%LIBSPATH% %_cmdline%
 @echo off
 if "%SPOON_PAUSE%"=="1" pause
